Fixed grpc issues and tested dashboard api for doctor